# netquery

./: .gitignore  CHANGELOG.md  README.md  changes.md  cmd útiles.txt  install.sh  jsconfig.json  pyproject.toml  test.py  useful_cmds.md
.github/workflows/: build.yml
netquery/: main.py  utils.py
netquery/cmds/: query.py  show.py
src/netquery/: convert.py  core.py  exceptions.py  main.py  utils.py  utils_new.py
src/netquery/templates/: form.html
src/netquery/ui/: web.py
src/netquery/ui/cli/: main.py  parsers.py
src/netquery/ui/web/: server.py
src/netquery/ui/web/client/static/js/: table.js
src/netquery/ui/web/client/templates/: base.html  form.html  results.html
templates/custom/: cisco_xe_ssh_show_wlan_sum.textfsm
