[build-system]
requires = ["setuptools==80.9.0", "setuptools-scm==8.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "netquery"
dynamic = ["version"]
requires-python = ">=3.10,<4.0"
dependencies = [
    "netmiko==4.5.0",
    "typer==0.16.0",
    "tabulate==0.9.0",
    "pandas==2.3.0",
]

[project.optional-dependencies]
dev = ["build==1.2.2.post1"]

[project.scripts]
netquery = "netquery.main:app"
netquery-convert = "netquery.convert:app"

[tool.setuptools_scm]
fallback_version = "0.0.0"
